argo-cd-implementation/devops/argocd-config/base/ingress-cli.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-cli-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - host: argocd-dev.example.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
  tls:
  - secretName: star-example-tls
    hosts:
    - argocd-dev.example.internal
